--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-full-screen": "^1.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
