--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/d3": "^7.4.0",
     "d3": "^7.8.5",
+    "dom-to-image": "^2.6.0",
     "framer-motion": "^10.15.1",
     "i": "^0.3.7",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "npm": "^9.8.1",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
